# MIMUW

./: README.md
I semester/: README.md  crosscram.c  polynomials.c
I semester/iip/: README.md  attainable.c
I semester/ip/: README.md
II semester/: README.md
II semester/Labyrinth/: iolib.h  lablib.c  lablib.h  main.c  prolib.c  strct.c  strct.h  test.sh
II semester/ipp/: README.md
II semester/ipp/Labyrinth/: README.md  iolib.c  iolib.h  lablib.h  makefile  prolib.c  prolib.h  strct.c  strct.h
II semester/ipp/Telephones/: CMakeLists.txt  Doxyfile.in  MainPage.dox  README.md
II semester/ipp/Telephones/src/: list.c  list.h  phone_forward.c  phone_forward.h  phone_forward_example.c  string.c  string.h  trie.c  trie.h
II semester/oop/: README.md
II semester/oop/BajtTrade/: README.md  compile.sh  pom.xml
II semester/oop/Matrices/: README.md
II semester/oop/Small assigments/: README.md  Sito.java
II semester/oop/SmallAssigments/: Hanoi.java  README.md
III semester/: README.md
III semester/ads/: README.md  cho.cpp  kap.cpp  kin.cpp  kom.cpp  lex.cpp  mat.cpp  mec.cpp  par.cpp  prj.cpp  sor.cpp
III semester/cp/: README.md
III semester/cp/circus/: README.md  demo.cpp  system.cpp  system.hpp
III semester/cp/executor/: README.md  utils.c  utils.h
III semester/cp/labs/c/lab10/: CMakeLists.txt  get_memory.c  send_message.c  send_message_no_inheritance.c  send_message_protected.c  unnamed_memory.c  unnamed_memory_protected.c
III semester/cp/labs/cpp/lab12/: CMakeLists.txt  args.cpp  promise-exception.cpp  promise.cpp  res.cpp  thread-detached.cpp  thread-join.cpp  thread-raii.cpp  thread.cpp
III semester/cp/labs/cpp/lab13/: CMakeLists.txt  condition.cpp  lock.cpp  mutex.cpp  thread-local-static.cpp  thread-local.cpp
III semester/cp/workshop/cp2022/: README.md
III semester/dbs/: README.md
III semester/plt1/: README.md
III semester/plt1/task1/: top7.cc  top7_tresc.txt
III semester/plt1/task2/: hash.cc  hash.h  hash_tresc.txt
III semester/plt1/task3/: moneybag.cc  moneybag.h  moneybag_tresc.txt
III semester/plt1/task4/: organism.h  organizmy_tresc.txt
III semester/plt1/task5/: kvfifo.h  kvfifo_tresc.txt
III semester/plt1/task6/: worldcup.h  worldcup2022.h  worldcup_tresc.txt
III semester/plt1/task7/: README.md  bmp.cc  bmp.h  color.cc  color.h  coordinate.cc  coordinate.h  functional.h  images.h  images_tresc.txt
IV semester/: README.md
IV semester/cnet/: README.md
IV semester/cnet/labs/cnet03/: echo-client.c  echo-server.c
IV semester/cnet/labs/cnet04/: CMakeLists.txt  echo-server.c  nums-client.c  struct-in-memory.c
IV semester/cnet/labs/cnet06/: file-client-tcp.c
IV semester/cnet/labs/cnet07/nonblocking/: CMakeLists.txt  echo-client-timeout.c
IV semester/cnet/radio_big/: README.md  common.h  err.h  makefile  radio_list.h  sikradio-receiver.c  sikradio-sender.c
IV semester/cnet/radio_small/: README.md  common.h  makefile  sikradio-receiver.c  sikradio-sender.c
IV semester/labs/cnet04/: common.h  echo-client.c  nums-server.c
IV semester/labs/cnet06/: CMakeLists.txt  file-server-tcp.c
IV semester/labs/cnet07/: CMakeLists.txt  common.h
IV semester/labs/cnet07/nonblocking/: echo-server-nonblocking.c
IV semester/labs/cnet09/: Makefile  err.h  in_cksum.c  rawping.c  spoofping.c
IV semester/ltp2/: README.md
IV semester/os/: README.md  core.asm  inverse_permutation.asm  km438612_minix1.patch  km438612_minix2.patch  km438612_minix3.patch
IV semester/swe/: README.md
IV semester/webapp/: Procfile  README.md  db.sqlite3  manage.py  requirements.txt
IV semester/webapp/aplikacjewww/: asgi.py  settings.py  urls.py  wsgi.py
IV semester/webapp/compiler/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
IV semester/webapp/staticfiles/: staticfiles.json
V semester/: README.md
V semester/dnn/: README.md
V semester/haskell/: Graph.hs  README-sokoban-terminal.md  README.md  Set.hs  Supply.hs  sokoban-codeworld.hs  sokoban-terminal.hs
VI semester/: README.md
VI semester/paradigms/: README.md
cp/executor/: CMakeLists.txt  err.h  executor.c
(+179 files in other folders)
